# recsys2025_project_hse

./: .gitignore  README.md
src/: README.md  pyproject.toml
src/ALS/: run_als.py
src/EDA/: eda.ipynb  knowledge_mining.ipynb
src/LightFM/: run_fm.py
src/config/: all_interactions_text.yaml  buy_add_categories.yaml  lightfm_64.yaml  merge.yaml  page_session.yaml  search_queries_text.yaml  small_llm.yaml
src/helpers/: data.py
src/merge/: merge_all_solutions.py
src/smallLLM/: embed_cliends_vllm.py  prepare_interactions_text.py  prepare_search_queries_jsonl.py
